# wkit

./: .gitignore  .goreleaser.yml  .tagpr  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  fisher_plugins  go.mod  go.sum  install.fish  install.sh  integration_test.go  main.go
.claude/: settings.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  tagpr.yml
completions/: wkit.fish
conf.d/: wkit.fish
examples/fish/: README.md  wkit.fish
examples/fish/functions/: wkit.fish  wkit_prompt.fish
fish/: wkit.fish
fish/functions/: wkit.fish
functions/: wkit.fish
internal/cmd/: add.go  add_test.go  clean.go  config.go  config_test.go  list.go  list_test.go  remove.go  root.go  status.go  switch.go  sync.go
internal/config/: config.go  config_test.go
internal/git/: executor.go  executor_test.go
internal/worktree/: manager.go  manager_test.go
src/: config.rs  main.rs  worktree.rs  z_integration.rs
tests/: integration_tests.rs
