[package]
name = "wkit"
version = "0.1.0"
edition = "2021"
authors = ["takashabe"]
description = "Convenient git worktree management toolkit"
license = "MIT"

[[bin]]
name = "wkit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"